<resources>
    <string name="app_name">Geoff\'s Geob</string>
    <string name="app_name_title">Geoff\'s \nGeob</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Challen\'s Chontrols</string>
    <string name="nav_header_subtitle">Navigation Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_university_mail">University Mail</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_homework">Homework</string>
    <string name="menu_midterm">Midterm</string>
    <string name="menu_machine_project">Machine Project</string>
    <string name="menu_random_encounter">Random Encounter</string>
    <string name="menu_button">Button</string>
    <string name="menu_enter_difficulty">Enter difficulty: </string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string-array name="difficulty">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="quiz_names">
        <item>Course Policies and Procedures</item>
        <item>Variables and Conditionals</item>
        <item>Loops, Arrays, and Functions</item>
        <item>Strings, More Functions, and Multi-Dimensional Arrays</item>
        <item>Introduction to Objects</item>
        <item>Objects, Continued</item>
        <item>Polymorphism and References</item>
        <item>Interfaces</item>
        <item>Algorithm Analysis and Lists</item>
        <item>Trees and Recursion</item>
        <item>Sorting</item>
        <item>Internet, Exceptions, Hashing</item>
        <item>Nothing</item>
    </string-array>
    <string-array name="midterm_names">
        <item>Imperative Programming</item>
        <item>Object-Oriented Programming</item>
        <item>Algorithms and Data Structures</item>
        <item>Nothing</item>
    </string-array>
    <string-array name="mp_names">
        <item>Target Mode</item>
        <item>Area Mode</item>
        <item>Web APIs</item>
        <item>Refactoring and More JSON</item>
        <item>Polymorphism</item>
        <item>Final Project</item>
        <item>Nothing</item>
    </string-array>
    <string-array name="homework_names">
        <item>Simple Conditionals</item>
        <item>Arrays</item>
        <item>Loops</item>
        <item>Functions</item>
        <item>Strings</item>
        <item>Objects</item>
        <item>Inheritance</item>
        <item>Polymorphism</item>
        <item>Interfaces</item>
        <item>Lists</item>
        <item>Binary Trees</item>
        <item>Recursion</item>
        <item>Sorting</item>
        <item>Exceptions</item>
        <item>Hashing</item>
        <item>Nothing</item>
    </string-array>
    <string-array name="random_encounters">
        <item>You just finished reading this amazing book called Coders, and you think that adding it to the syllabus will help students gain insight into the tech world, even if it is a little more work for them. What do you do?</item>
        <item>The administration tells you that counting attendance by following along to lecture slides isn’t a good method, since students can simply follow along for their friends given their netID and password. It wants you to use i-clickers for attendance. What do you do?</item>
        <item>MP0 is out and it\'s so hard the students need therapy! You’re not professionally trained for that, but you can help them in other ways. What do you do?</item>
        <item>You see a lot of posts on the forum and on Reddit from beginner coders claiming that CS 125 is too hard, and that it isn’t beginner-friendly. What do you do?</item>
        <item>MP1 is out, and cheating levels have increased drastically. What do you do?</item>
        <item>There’s an epidemic! Well, not really, but it’s flu season and just about three fourths of the students are coughing in lecture. What do you do?</item>
        <item>MP2 is out, and it’s harder than ever! Your students are stressed out, and your TAs and CAs are beginning to agree that it’s too hard, too. What do you do?</item>
        <item>The mid-term grades are supposed to be uploaded on self-service, but the autograder is down! What do you do?</item>
        <item>You notice that the class average is far lower than those of the previous years’, and you want to try to fix it. What do you do?</item>
        <item>You noticed a fairly offensive image on the forum with your face photoshopped onto another image—let’s not go into detail. What do you do?</item>
        <item>Your underpaid and overworked TAs and CAs are done. They go on strike against CS 125 until more are hired. What do you do?</item>
        <item>Your students have reported bugs in online grading. What do you do?</item>
        <item>Due to heavy scheduling, the administration keeps trying to postpone the CS 125 fair. They tell you now that the Fall 2019 fair must be held about a week before Spring break! What do you do?</item>
        <item>It’s the end of the semester and your students are getting bored. Most of them spend lectures watching Netflix. What do you do?</item>
        <item>Your students are losing interest in lectures, and you want to keep their attention. You’re thinking about how to fix this when your cat, Xyz, jumps onto your laptop. What do you do?</item>
        <item>It’s the end of the semester and your students are getting bored. Most of them spend lectures watching Netflix. What do you do?</item>
        <item>nothing</item>

    </string-array>
    <string-array name="encounterHeader">
        <item>Coders</item>
        <item>Attendance</item>
        <item>Extra Office Hours</item>
        <item>Course Difficulty</item>
        <item>Cheating</item>
        <item>Coughing</item>
        <item>MP Drop</item>
        <item>Mid-term Grades</item>
        <item>Extra Credit</item>
        <item>Offensive Meme</item>
        <item>Staff Strike!</item>
        <item>Bugs</item>
        <item>CS 125 Project Fair</item>
        <item>Meow</item>
        <item>Netflix</item>
        <item>Nothing</item>
    </string-array>
    <string-array name="positiveEncounter">
        <item>Add Coders to the syllabus</item>
        <item>Vehemently disagree and continue with your method</item>
        <item>Provide extra office hours</item>
        <item>Reduce the difficulty of the course a little.</item>
        <item>Turn a blind eye; the MP is too hard, anyway</item>
        <item>Tell the students to go home and rest</item>
        <item>Provide an MP Drop</item>
        <item>Work on it devotedly, along with all your Course Developers and TAs. </item>
        <item>Add an extra credit opportunity in MP3</item>
        <item>Take it down</item>
        <item>Agree to hire more TAs and paid CAs</item>
        <item>Fix it</item>
        <item>Accept the change in date and inform your students of the delay</item>
        <item>Bring Xyz to lecture</item>
        <item>Get the administration to block Netflix on IllinoisNet</item>
        <item>nothing</item>
    </string-array>
    <string-array name="negativeEncounter">
        <item>Don’t add Coders to the syllabus</item>
        <item>Agree to their terms and ask your students to bring i-clickers</item>
        <item>Tell the students that they’re supposed to be overwhelmed and do nothing else</item>
        <item>Increase the difficulty instead to teach them a little discipline</item>
        <item>Create a complex plagiarism checker to counter the evil cheaters</item>
        <item>Ignore it and continue with the lecture</item>
        <item>Don’t do anything</item>
        <item>Delay the mid-term grades a little and work on fixing it slowly</item>
        <item>Do nothing, remind your students that office hours exist</item>
        <item>Leave it up</item>
        <item>Drown them in legal notices until they’re forced to go back to work</item>
        <item>Don’t fix it</item>
        <item>Aggressively pursue them until you get the date you’d initially asked for</item>
        <item>Do not bring Xyz to lecture</item>
        <item>Ignore it</item>
        <item>nothing</item>
    </string-array>
    <string name="mailAdmin">From: administration@illinois.edu</string>
    <string name="mailTo">To: challen@illinois.edu</string>
    <string name="mailCLosingEverybody">Regards, \nLiterally Everybody</string>
    <string-array name="mailSubject">
        <item>Welcome!</item>
        <item>Coders</item>
        <item>Attendance</item>
        <item>Extra Office Hours</item>
        <item>Course Difficulty</item>
        <item>Cheating</item>
        <item>Coughing</item>
        <item>MP Drop</item>
        <item>Mid-term Grades</item>
        <item>Extra Credit</item>
        <item>Offensive Meme</item>
        <item>Staff Strike!</item>
        <item>Bugs</item>
        <item>CS 125 Project Fair</item>
        <item>Meow</item>
        <item>Netflix</item>
    </string-array>
    <string name="five_week">5 weeks</string>
    <string name="ten_week">10 weeks</string>
    <string name="fifteen_week">15 weeks</string>
    <string name="disable_bonuses">Disable Bonuses</string>
    <string name="chuchu">Chuchu</string>
    <string name="ben_nordick">Ben Nordick</string>
    <string name="geoffrey_challen">The real Geoffrey Challen</string>
    <string name="bonuses">Bonuses</string>
    <string name="satisfaction_university">University Satisfaction: </string>
    <string name="satisfaction_student">Student Satisfaction: </string>
    <string name="cat_mode">Cat mode</string>
    <string name="disable_progress_bars">Hide satisfaction meters</string>
    <string name="disable_encounters">Disable encounters</string>
    <string name="text_general">General</string>
    <string name="text_volume">Volume</string>
    <string name="half">50%</string>
    <string name="text_about">About</string>
    <string name="encounter">Encounter</string>
    <string name="details_about">This game was created by Ishita Rao and Kanav Bhatnagar as their final project for CS 125. They cool. Pls give them an A+, they’ll give you a singular cookie.</string>
    <string name="using_about">
        Music we’re using:
        \n"8 Bit Win!" By HeatleyBros
        \nNyan Cat [original] by Daniwell-P/Momone Momo UTAU

        \n\nCat Icon:
        \nIcons made by Smashicons
        \nwww.flaticon.com</string>
    <string name="text_settings">Settings</string>
    <string name="reset_game">Reset Game</string>
    <string name="bg_volume">Background Volume:</string>
    <string name="sfx_volume">SFX Volume:</string>
    <string name="desc_main">Welcome, Geoff! You’re back for the Fall 2019 semester to teach CS 125.
       Your students last Spring were moderately happy with your work, congrats!
       However, that means that your new batch of students and the university have high expectations from you
       to do a great job, yet again. \n\nLet\'s get started! Choose the number of weeks in the semester: </string>
</resources>