<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/geoff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#66030000"
        android:backgroundTintMode="src_atop"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/app_name_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="8dp"
        android:background="#85FFFFFF"
        android:text="@string/desc_main"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/fiveWeeks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#AE969992"
        android:text="@string/five_week" />

    <Button
        android:id="@+id/tenWeeks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#AE969992"
        android:text="@string/ten_week" />

    <Button
        android:id="@+id/fifteenWeeks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#AE969992"
        android:text="@string/fifteen_week" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="70dp"
        android:background="#00AFB42B"
        android:text="@string/menu_about"
        android:textAllCaps="false"
        android:textColor="#FFFDFD" />
</LinearLayout>