<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/bonuses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:text="@string/bonuses" />

    <Button
        android:id="@+id/chuchu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/chuchu" />

    <TextView
        android:id="@+id/chuchuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />

    <Button
        android:id="@+id/benNordick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/ben_nordick" />

    <TextView
        android:id="@+id/benNordickText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />

    <Button
        android:id="@+id/geoffreyChallen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/geoffrey_challen" />

    <TextView
        android:id="@+id/geoffreyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />

</LinearLayout>