<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/universitySatisfaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:text="@string/satisfaction_university" />

    <ProgressBar
        android:id="@+id/universityProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="@color/colorProgressBar"
        android:scaleY="2.5"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/universityNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="end" />

    <TextView
        android:id="@+id/studentSatisfaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/satisfaction_student" />

    <ProgressBar
        android:id="@+id/studentProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:progressTint="@color/colorProgressBar"
        android:scaleY="2.5"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/studentNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="end" />

    <TextView
        android:id="@+id/encounterHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/encounter"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/encounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/menu_random_encounter"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/firstButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:textAllCaps="false"
        android:textAlignment="viewStart"
        android:background="@android:color/transparent"
        android:textColor="@color/colorGray"
        android:text="@string/menu_button" />

    <Button
        android:id="@+id/secondButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:textAllCaps="false"
        android:textAlignment="viewStart"
        android:textColor="@color/colorGray"
        android:background="@android:color/transparent"
        android:text="@string/menu_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|end">

        <Button
            android:id="@+id/bonuses"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="-50dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:text="@string/bonuses" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="8dp"
            app:backgroundTint="#2B3EAA"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp" />

    </LinearLayout>

</LinearLayout>